feat: add get all trainers
